--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <img src="./images/Capture 2.JPG" height="200" alt="CSS Box Model">
     <h2><a href="./public/Motivation+Meme+Project.html">Motivation Meme Project</a></h2>
     <img src="./images/Capture 3.JPG" height="200" alt="Motivation Meme Project">
+    <h2><a href="./public/Flag+Project.html">Flag Project</a></h2>
+    <img src="./images/Capture 4.JPG" height="200" alt="Flag Project">
 </body>
 </html>
