--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Project</title>
+    <style>
+      div > h1 {
+        width: 100%;
+        height: 100%;
+        background-color: #153448;
+        }
+        h1 {
+            color: aliceblue;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>CSS Projects</h1>
+    <div>
+        <h1>CSS Projects</h1>
+    </div>
     <h2><a href="./public/Color+Vocab+Project.html">Color Vocab Project</a></h2>
     <img src="./images/Capture 1.JPG" height="300" alt="Color Vocab Project">
    
